# arag-benchmark

./: .gitignore  LICENSE  README.md  debug_import.py  implementation_plan.md  start_app.ps1  start_app.sh
backend/: .env.example  main.py  pyproject.toml  rag_core.py  requirements.txt
docs/: IMPLEMENTATION.md  QUICKSTART.md
frontend/: package-lock.json
frontend/app/: globals.css  page.tsx
frontend/components/: ChatInterface.tsx  MetricsChart.tsx  UploadZone.tsx
